[package]
name = "yor"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
anyhow = "1.0.61"
dirs = "4.0.0"
getrandom = "0.2.7"
orion = "0.17.1"
pickledb = "0.5.1"
rpassword = "7.0.0"
serde = "1.0.143"
base64 = "0.13.0"
rand = "0.8.5"

